Fixed the issue of too many resizing events occuring by just setting the width and height of the node-link graph using vh and vw and setting the overflow of the parent div to hidden

--- a/et-system-frontend/src/Pages/TracePageComponentsNew/TPStyleSheet.css
+++ b/et-system-frontend/src/Pages/TracePageComponentsNew/TPStyleSheet.css
@@ -31,12 +31,15 @@
     border: 1px solid black;
     min-width: 0;
     min-height: 0;
+    overflow: hidden;
 
 }
 
 .TP-node-link-graph{
     min-width: 0;
     min-height: 0;
+    height: 100vh;
+    width: 55vw;
 }
 
 
