--- a/et-system-frontend/src/index.css
+++ b/et-system-frontend/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-width: 0;
+  min-height: 0;
 }
 
 code {
